# sim-evals

./: pyproject.toml  run_eval.py
src/sim_evals/inference/: droid_jointpos.py
